perf(alns): add utilization penalty, snapshot/restore, early termination, and 2-hop greedy init
- Replace deepCopy per ALNS iteration with lightweight snapshot/restore pattern

- Add w4 utilization penalty to objective function (incentivizes consolidation)

- Add early termination after stagnant segments with no improvement

- Add 2-hop connection fallback in greedy initialization

- Make connectMinGapMinutes configurable via AlnsParams

- Rebalance default/fast weight presets